--- a/index.html
+++ b/index.html
@@ -22,15 +22,12 @@
             </p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo"> Acesse minhas redes</h2>
-                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/guisoares._">
-                    Instagram
-                    <img src="assets/instagram-logo.png" alt="Logo do Instagram">
-                </a>
-                <a class="apresentacao__links__navegacao" href="https://github.com/login">
+
+                <a class="apresentacao__links__navegacao" href="https://github.com/Guilherme1606">
                     GitHub
                     <img src="assets/github-logo.png" alt="Logo do GitHub">
                 </a>
-                <a class="apresentacao__links__navegacao" href="https://github.com/login">
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/guilherme-soares-46904612b/">
                     Linkedln
                     <img src="assets/linkedin.png" alt="Logo Linkedln">
                 </a>
